:bug: Fix z-index issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
   overflow-y: auto;
   position: fixed;
   padding-bottom: 1rem;
-  z-index: 5;
+  z-index: 2;
   .list {
     list-style-type: none;
     h4 {
